fixed extra spaces and mobile responsiveness

--- a/src/main/components/Advertiser/AdvertiserStyles/AdvertiserBenefit.module.css
+++ b/src/main/components/Advertiser/AdvertiserStyles/AdvertiserBenefit.module.css
@@ -166,9 +166,9 @@
 }
 
 
-.rs_section_container {
+/* .rs_section_container {
     padding-bottom: 50px;
-}
+} */
 
 .rs_common_red_square_block {
     /* background-color: var(--secondary-color); */
