--- a/src/main/components/Home/HomeStyles/Rtb.module.css
+++ b/src/main/components/Home/HomeStyles/Rtb.module.css
@@ -10,13 +10,6 @@
 
 }
 
-.rk_proven_td{
-    /* display: flexbox; */
-    /* display: flex;
-    flex-wrap: nowrap; */
-}
-
-
 
 .RtbCardsHeading {
     margin: 0px;
